# simple_soft_rasterizer

./: CMakeLists.txt  main.cpp  primitive.h  rasterizer.cpp  utils.h  vertex.h
lib/glfd/include/glad/: glad.h
lib/glfd/src/: glad.c
